Improve API description strings
